# OOP_2026

./: .gitignore  CMakeLists.txt  CMakePresets.json
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt  main.cpp
labs/lab2/: CMakeLists.txt  main.cpp  vec.cppm
labs/lab3/: CMakeLists.txt  delete_error.cppm  main.cpp  ssmodule.cppm
labs/lab4/: CMakeLists.txt  delete_error.cppm  factorial.cppm  helping_for_reading.cppm  main.cpp  min_sequence.cppm  sequence.cppm  squares.cppm
labs/lab5/: CMakeLists.txt  counting_unique_words.cppm  download_text.cppm  frequent_repetition.cppm  main.cpp  normalize.cppm  text.txt
practice1/: main.c
practice10/: CMakeLists.txt
practice10/lib/: LogicGame.cppm  Renderer.cppm
practice10/src/: main.cpp
practice2/task2.1/: main.cpp
practice2/task2.10/: main.cpp
practice2/task2.2/: main.cpp
practice2/task2.3/: main.cpp
practice2/task2.4/: CMakeLists.txt  main.cpp
practice2/task2.5/: main.cpp
practice2/task2.6/: main.cpp
practice2/task2.7/: main.cpp
practice2/task2.8/: main.cpp
practice2/task2.9/: CMakeLists.txt  main.cpp
practice3/task3.1/: CMakeLists.txt
practice3/task3.2/: main.cpp
practice3/task3.3/: main.cpp
practice3/task3.4/: main.cpp
practice3/task3.5/: CMakeLists.txt  main.cpp
practice3/task3.6/: CMakeLists.txt  main.cpp
practice3/task3.7/: CMakeLists.txt  main.cpp
practice4/task4.1/: CMakeLists.txt  main.cpp
practice4/task4.2/: CMakeLists.txt  main.cpp
practice4/task4.3/: CMakeLists.txt  main.cpp
practice4/task4.4/: main.cpp
practice5/task5.1/: main.cpp
practice5/task5.2/: CMakeLists.txt  main.cpp
practice5/task5.3/: CMakeLists.txt  main.cpp
practice5/task5.4/: CMakeLists.txt  main.cpp
practice5/task5.5/: CMakeLists.txt  main.cpp
practice5/task5.6/: CMakeLists.txt  main.cpp
practice6/task6.2/: CMakeLists.txt  main.cpp
practice7/: Counters.cppm  main.cpp
practice8/: CMakeLists.txt
practice8/src/containers/: Dictionary.cppm  HashSet.cppm  List.cppm  Queue.cppm  Stack.cppm
practice9/: CMakeLists.txt  main.cpp
practice9/src/: main.cpp
practice9/src/lib/: LogicGame.cppm
practices/: CMakeLists.txt
practices/practice1/: build.bat
practices/practice10/: CMakeLists.txt
practices/practice10/lib/: Assets.cppm
practices/practice10/src/: main.cpp
practices/practice2/task2.1/: CMakeLists.txt  main.cpp
practices/practice2/task2.10/: CMakeLists.txt
practices/practice2/task2.2/: CMakeLists.txt
practices/practice2/task2.3/: CMakeLists.txt  main.cpp
practices/practice2/task2.5/: CMakeLists.txt
practices/practice2/task2.6/: CMakeLists.txt
practices/practice2/task2.7/: CMakeLists.txt  main.cpp
practices/practice2/task2.8/: CMakeLists.txt
practices/practice2/task2.9/: main.cpp
practices/practice3/task3.1/: main.cpp
practices/practice3/task3.2/: CMakeLists.txt  main.cpp
practices/practice3/task3.3/: CMakeLists.txt
practices/practice3/task3.4/: CMakeLists.txt  main.cpp
practices/practice3/task3.5/: main.cpp
practices/practice3/task3.6/: main.cpp
practices/practice3/task3.7/: main.cpp
practices/practice4/task4.4/: CMakeLists.txt  main.cpp
practices/practice5/task5.1/: CMakeLists.txt
practices/practice5/task5.4/: main.cpp
practices/practice5/task5.5/: main.cpp
practices/practice6/task6.1/: CMakeLists.txt  main.cpp
practices/practice6/task6.2/: main.cpp
practices/practice7/: CMakeLists.txt  main.cpp
practices/practice8/src/: main.cpp
practices/practice8/src/containers/: List.cppm  Stack.cppm
practices/practice8/src/interface/: ICollection.cppm  IEnumerable.cppm  IEnumerator.cppm
