cmake_minimum_required(VERSION 4.2.0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_MODULE_STD ON)

# https://github.com/Kitware/CMake/blob/master/Help/dev/experimental.rst
if(CMAKE_VERSION VERSION_GREATER_EQUAL "4.3.0")
    set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD 451f2fe2-a8a2-47c3-bc32-94786d8fc91b)
elseif(CMAKE_VERSION VERSION_GREATER_EQUAL "4.2.0")
    set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD d0edc3af-4c50-42ea-a356-e2862fe7a444)
endif()

project("oop-practice" LANGUAGES CXX)

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    string(REGEX REPLACE "/W[0-4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  endif()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8 /W4")
endif()

add_subdirectory("practice2/task2.1")
add_subdirectory("practice2/task2.2")
add_subdirectory("practice2/task2.3")
add_subdirectory("practice2/task2.4")
add_subdirectory("practice2/task2.5")
add_subdirectory("practice2/task2.6")
add_subdirectory("practice2/task2.7")
add_subdirectory("practice2/task2.8")
add_subdirectory("practice2/task2.9")
add_subdirectory("practice2/task2.10")
add_subdirectory("practice3/task3.1")
add_subdirectory("practice3/task3.2")
add_subdirectory("practice3/task3.3")
add_subdirectory("practice3/task3.4")
add_subdirectory("practice3/task3.5")
add_subdirectory("practice3/task3.6")
add_subdirectory("practice3/task3.7")
add_subdirectory("practice4/task4.1")
add_subdirectory("practice4/task4.2")
add_subdirectory("practice4/task4.3")
add_subdirectory("practice4/task4.4")
add_subdirectory("practice5/task5.1")
add_subdirectory("practice5/task5.2")
add_subdirectory("practice5/task5.3")
add_subdirectory("practice5/task5.4")
add_subdirectory("practice5/task5.5")
add_subdirectory("practice5/task5.6")
add_subdirectory("practice6/task6.1")
add_subdirectory("practice6/task6.2")
add_subdirectory("practice7")
add_subdirectory("practice8")
add_subdirectory("practice9")
add_subdirectory("practice10")