add_subdirectory("practice2/task2.1")
add_subdirectory("practice2/task2.2")
add_subdirectory("practice2/task2.3")
add_subdirectory("practice2/task2.4")
add_subdirectory("practice2/task2.5")
add_subdirectory("practice2/task2.6")
add_subdirectory("practice2/task2.7")
add_subdirectory("practice2/task2.8")
add_subdirectory("practice2/task2.9")
add_subdirectory("practice2/task2.10")
add_subdirectory("practice3/task3.1")
add_subdirectory("practice3/task3.2")
add_subdirectory("practice3/task3.3")
add_subdirectory("practice3/task3.4")
add_subdirectory("practice3/task3.5")
add_subdirectory("practice3/task3.6")
add_subdirectory("practice3/task3.7")
add_subdirectory("practice4/task4.1")
add_subdirectory("practice4/task4.2")
add_subdirectory("practice4/task4.3")
add_subdirectory("practice4/task4.4")
add_subdirectory("practice5/task5.1")
add_subdirectory("practice5/task5.2")
add_subdirectory("practice5/task5.3")
add_subdirectory("practice5/task5.4")
add_subdirectory("practice5/task5.5")
add_subdirectory("practice5/task5.6")
add_subdirectory("practice6/task6.1")
add_subdirectory("practice6/task6.2")
add_subdirectory("practice7")
add_subdirectory("practice8")
add_subdirectory("practice9")
add_subdirectory("practice10")